// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CanonicalAds Ads Snapshots should correctly render a Canonical mpu ad with dotcom-bootstrap script 1`] = `
<html>
  <head>
    <script
      src="http://mock-test-script"
      type="module"
    />
    <script
      nomodule="nomodule"
      src="http://mock-test-script-legacy"
    />
  </head>
  <body>
    <div>
      <section
        aria-hidden="true"
        aria-label="Advertisement 2"
        class="AdContainer-sc-8mk8fx-0 hGXTxz"
        role="region"
      >
        <div
          class="dotcom-ad"
          id="dotcom-mpu"
        />
      </section>
    </div>
  </body>
</html>
`;

exports[`CanonicalAds Ads Snapshots should correctly render an Canonical leaderboard ad with dotcom-bootstrap script 1`] = `
<html>
  <head>
    <script
      src="http://mock-test-script"
      type="module"
    />
    <script
      nomodule="nomodule"
      src="http://mock-test-script-legacy"
    />
  </head>
  <body>
    <div>
      <section
        aria-hidden="true"
        aria-label="Advertisement"
        class="AdContainer-sc-8mk8fx-0 cfynHM"
        role="region"
      >
        <div
          class="dotcom-ad"
          id="dotcom-leaderboard"
        />
      </section>
    </div>
  </body>
</html>
`;
